# AdapCHOL

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  readme.md  remote.bash
host/: CMakeLists.txt
host/include/: adapchol.h  common.h  dispatcher.h  utils.h
host/include/backend/: common.h  cpu.h
host/include/backend/cpu/: cpu.h
host/include/backend/fpga/: fpga.h  xrt_wrapper.h
host/include/internal/: adapchol.h  dispatcher.h  io.h  utils.h
host/include/internal/cs_adap/: cs_adap.h
host/src/: adapchol.cpp  dispatcher.cpp  interface.cpp  utils.cpp
host/src/backend/: cpu.cpp
host/src/backend/cpu/: cpu.cpp
host/src/backend/fpga/: fpga.cpp  xrt_wrapper.cpp
host/src/internal/: adapchol.cpp  io.cpp
host/src/internal/cs_adap/: cs_adap.cpp
host/test/include/: io.h
host/test/scripts/: gen_input.bash  gen_input.py  mat_download.py  test.bash  test.py
host/test/src/: io.cpp  test.cpp  testsol.cpp  xrt_test.cpp
pl/: CMakeLists.txt
pl/include/: common_def.h  krnl_col.h
pl/src/: krnl_col.cpp
pl/tcls/: csynth_design.tcl  export_design.tcl
pl/testbench/: test1.cpp
